# skillForge

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: publish.yml
src/skillforge/: __init__.py  response.py  server.py  skill_manager.py  validator.py
src/skillforge/guide/: skill_writing_guide.md
src/skillforge/tools/: __init__.py  backup.py  crud.py  discovery.py  optimization.py  triage.py
